--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "flowbite-react": "^0.12.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.8.0",
     "tailwindcss-animated": "^2.0.0"
   },
